--- a/package.json
+++ b/package.json
@@ -9,5 +9,10 @@
     },
     "scripts": {
         "start": "node index.js"
+    },
+    "devDependencies": {
+        "@babel/cli": "^7.23.4",
+        "@babel/core": "^7.23.3",
+        "@babel/preset-env": "^7.23.3"
     }
 }
